--- a/Frontend/Components/Shared/NavBar.razor.css
+++ b/Frontend/Components/Shared/NavBar.razor.css
@@ -3,6 +3,7 @@
     height: 3.5rem;
     display: flex;
     align-items: center;
+    z-index: 6 !important;
 }
 
 .top-row .nav-link.auth {
